[package]
name = "titan-swap-api-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust client for Titan swap aggregator API on Solana."

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["brotli", "gzip", "deflate"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
solana-sdk = "3.0.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
