[workspace]
members = [".", "examples"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[package]
name = "titan-swap-api-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust client for Titan swap aggregator API on Solana."

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["brotli", "gzip", "deflate"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
solana-sdk = "3.0.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
