[workspace]
members = [".", "examples"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[package]
name = "titan-swap-api-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust client for Titan swap aggregator API on Solana."

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["brotli", "gzip", "deflate"] }
rmp-serde = "1.3"
serde = { version = "1.0.159", features = ["derive"] }
solana-sdk = "2.3"
thiserror = "2"
tokio = { version = "1.42", features = ["full"] }
