[package]
name = "titan-swap-test"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
dotenv = "0.15.0"
solana-client = "2.3.0"
solana-transaction-status = "2.3.0"
solana-sdk = "2.3.0"
titan-swap-api-client = { path = ".." }
tokio = { version = "1.42.0", features = ["full"] }
